# efficiency_tools

./: README.md  package-lock.json
.github/workflows/: ai-daily-digest.yml
ai-daily-digest/: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
ai-daily-digest/scripts/: register_task.ps1  run_daily.bat
ai-daily-digest/src/: config.py  content_extractor.py  history.py  http_client.py  main.py  models.py  renderer.py  seen_ledger.py  summarizer.py  topics.py  utils.py
ai-daily-digest/src/collectors/: arxiv_papers.py  community_sources.py  github_trending.py  hackernews.py  hf_papers.py  last30days_sources.py  official_updates.py  rss_news.py
ai-daily-digest/src/templates/: archive.html.j2  report.html.j2
ai-daily-digest/tests/: conftest.py  test_collector_dates.py  test_community_sources.py  test_config.py  test_content_extractor.py  test_history.py  test_last30days_sources.py  test_official_updates.py  test_pipeline.py  test_renderer.py  test_rss.py  test_seen_ledger.py  test_summarizer.py  test_topics.py  test_utils.py
src/: App.css
src/components/: TaskCard.jsx  TaskModal.jsx  TeamTaskModal.jsx  TeamView.jsx
src/hooks/: useDailyTasks.js
workbench/: index.html  package.json
workbench/src/: App.jsx
workbench/src/components/: DailyTasks.jsx  Quadrant.jsx
workbench/src/hooks/: useTasks.js  useTeam.js
