[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-daily-digest"
version = "0.2.0"
description = "采集 AI 资讯、生成中文摘要并渲染 HTML 日报"
requires-python = ">=3.11,<3.14"
dependencies = [
  "openai>=1.40.0,<3",
  "requests>=2.31.0,<3",
  "feedparser>=6.0.11,<7",
  "beautifulsoup4>=4.12.0,<5",
  "jinja2>=3.1.0,<4",
  "pyyaml>=6.0,<7",
  "python-dotenv>=1.0.0,<2",
  "tzdata>=2024.1,<2028",
  "yt-dlp==2026.7.4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.12,<1"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
